# grid-based-autorouter

./: Cargo.toml  main.py  pyproject.toml
.github/: copilot-instructions.md
notes/: 25.11.29 init repo.md
src/: lib.rs
