[project]
name = "grid-based"
version = "0.1.0"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "maturin>=1.10.2",
    "pre-commit>=4.5.0",
    "ruff>=0.14.7",
    "tbump>=6.11.0",
]
